FIx sidebar navbar visibility

--- a/app/frontend/stylesheets/graph.scss
+++ b/app/frontend/stylesheets/graph.scss
@@ -7,17 +7,19 @@
   max-width: 100%;
 
   .graph-template__main {
+    flex: 3;
     height: 100%;
     background-color: $BACKGROUND_COLOR;
-    flex: 3;
   }
 
   .graph-template__sidebar {
-    height: 100%;
+    flex: 1;
+    height: calc(100% + $NAVBAR_HEIGHT);
     background-color: $ACCENT_BACKGROUND_COLOR;
     color: white;
-    flex: 1;
-    z-index: 1;
+
+    position: relative;
+    top: calc($NAVBAR_HEIGHT / -2);
   }
 }
 
